@@ -118,9 +118,9 @@ configuration variables that control specific aspects of Qtile's behavior:
     * - dgroups_app_rules
       - []
       - TODO
-    * - extensions
-      - {}
-      - TODO
+    * - extension_defaults
+      - same as `widget_defaults`
+      - Default settings for extensions.
     * - floating_layout
       - layout.Floating(float_rules=[...])
       - TODO
@@ -146,7 +146,7 @@ configuration variables that control specific aspects of Qtile's behavior:
       - dict(font='sans',
              fontsize=12,
              padding=3)
-      - TODO
+      - Default settings for bar widgets.
     * - wmname
       - "LG3D"
       - TODO
